test/2-error/adjacent-sym-num.err
parse error: test/2-error/adjacent-sym-num.ploy:1:2: adjacent expressions require a separating space.
  0a
   ^
