test/2-error/adjacent-sym-num.ploy
main = fn <>->Int
  0a;
